overflow-x bug fixed

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -34,6 +34,7 @@ body {
   color: var(--foreground);
   font-family: var(--font-sans);
   overflow-x: hidden;
+  max-width: 100%;
 }
 
 .wrapper {
